Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
0.10.0
-
None
-
None
-
Windows 7 x64, Visual Studio 2010
Description
After downloading all third-party packages, I compiled log4cxx 0.10.0 with my windows 7(x64) box with Visual Studio 2010.
It took me more about 3 hours to fix it and get it solved.
I met a lot of errors like the following:
d:\sources\apache-log4cxx-0.10.0\src\main\include\log4cxx/spi/loggingevent.h(155): error C2252: an explicit instantiation of a template can only occur at namespace scope