LOGCXX-366: errors when compiling under win7, thanks to Feng Nan and Christian Boos