src/main/include/log4cxx/helpers/simpledateformat.h
@@ -41,6 +41,9 @@ namespace log4cxx
             class PatternToken;
         }
 
+          LOG4CXX_LIST_DEF(PatternTokenList, log4cxx::helpers::SimpleDateFormatImpl::PatternToken*);
+
+
           /**
            * Concrete class for formatting and parsing dates in a
            * locale-sensitive manner.
@@ -77,8 +80,6 @@ namespace log4cxx
                   /**
                    * List of tokens.
                    */
-                  LOG4CXX_LIST_DEF(PatternTokenList, log4cxx::helpers::SimpleDateFormatImpl::PatternToken*);
-
                   PatternTokenList pattern;
                   
                   static void addToken(const logchar spec, const int repeat, const std::locale* locale, PatternTokenList& pattern);
